<resources>
    <string name="app_name">AmaniV3_0_0alpha04</string>
    <string name="amani_app_name">Amani Demo</string>
    <string name="str_message">If not filled customer created. If filled with an ID Number old customer used for KYC process so you can see rejection message etc</string>
    <string name="tcn_number">TCN NUMBER</string>
    <string name="email">EMAIL ID</string>
    <string name="password">PASSWORD</string>
    <string name="start_kyc">START KYC</string>
    <string name="doc_number">DOCUMENT NUMBER </string>
    <string name="expiry_date">EXPIRE DATE (YYMMDD)</string>
    <string name="birth_date">BIRTH DATE (YYMMDD)</string>

    <string name="entry_title">Amani Verify</string>
    <string name="entry_subtitle">Select your country, then scan the QR code to start verification.</string>
    <string name="select_country">Country</string>
    <string name="scan_qr">SCAN QR CODE</string>

</resources>