<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/color_white"
    tools:context="ai.amani.sample.MainRegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/amani_logo"
        android:layout_marginBottom="@dimen/dp_100"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="20dp"
        android:id="@+id/image_view"
        />

    <EditText
        android:id="@+id/input_id_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/color_black"
        android:background="@drawable/button_border"
        android:padding="@dimen/dp_10"
        android:height="40dp"
        android:inputType="number"
        android:hint="@string/tcn_number"
        android:textSize="@dimen/sp_14"
        android:textColorHint="#55000000"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_10"
        />

    <EditText
        android:id="@+id/input_birth_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/color_black"
        android:background="@drawable/button_border"
        android:padding="@dimen/dp_10"
        android:height="40dp"
        android:inputType="date"
        android:hint="@string/birth_date"
        android:textSize="@dimen/sp_14"
        android:textColorHint="#55000000"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_10"
        />

    <EditText
        android:id="@+id/input_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/color_black"
        android:background="@drawable/button_border"
        android:padding="@dimen/dp_10"
        android:height="40dp"
        android:inputType="date"
        android:hint="@string/expiry_date"
        android:textSize="@dimen/sp_14"
        android:textColorHint="#55000000"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_10"
        />

    <EditText
        android:id="@+id/input_doc_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/color_black"
        android:background="@drawable/button_border"
        android:padding="@dimen/dp_10"
        android:height="40dp"
        android:inputType="textCapWords"
        android:hint="@string/doc_number"
        android:textSize="@dimen/sp_14"
        android:textColorHint="#55000000"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_10"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:text="@string/start_kyc"
        android:background="@drawable/button_border_purple"
        android:textColor="@color/white"
        />

</LinearLayout>